[package]
name = "members-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.2"
axum-macros = "0.3.1"
oauth2 = "4.3.0"
once_cell = "1.17.0"
reqwest = { version = "0.11.13", features = ["json", "rustls"] }
serde = { version = "1.0.152", features = ["derive"] }
serenity = "0.11.5"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
