[package]
name = "members-db"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.63"
axum = "0.6.2"
dotenvy = "0.15.6"
firestore = "0.25.0"
oauth2 = "4.3.0"
reqwest = { version = "0.11.13", features = ["json", "rustls"] }
serde = { version = "1.0.152", features = ["derive"] }
serenity = "0.11.5"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
